base/quotes-frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quotes-frontend
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: quotes-frontend
        image: thabelo/quotes-frontend
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
