base/quotes-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quotes-frontend
spec:
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
